--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
         android:id="@+id/publish"
         android:layout_width="160dp"
         android:layout_height="106dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Request Description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/IncomingText" />
+        app:layout_constraintTop_toBottomOf="@+id/denyCaption" />
 
     <TextView
         android:id="@+id/IncomingText"
@@ -49,12 +49,12 @@
         android:layout_height="47dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="IP Address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/IncomingText" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmCqption" />
 
     <ImageView
         android:id="@+id/recievedImage"
@@ -66,5 +66,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:color/holo_red_light" />
+
+    <Button
+        android:id="@+id/confirmCqption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
+        android:layout_marginTop="12dp"
+        android:enabled="false"
+        android:text="Correct"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IncomingText" />
+
+    <Button
+        android:id="@+id/denyCaption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginRight="92dp"
+        android:enabled="false"
+        android:text="Incorrect"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IncomingText" />
 
 </android.support.constraint.ConstraintLayout>
